Fixed too small icons in notification module

--- a/src/atoms/notification/notification.scss
+++ b/src/atoms/notification/notification.scss
@@ -6,8 +6,13 @@
   background: $colorRed;
   padding: pxToRem($sizeRegular);
 
-  .icon use {
-    fill: $colorWhite;
+  .icon {
+    min-width: pxToRem(24);
+    min-height: pxToRem(24);
+
+    use {
+      fill: $colorWhite;
+    }
   }
 
   &__title {
